# tauri-interpreter

./: .conventional-changelogrc  .env  .gitignore  CHANGELOG.md  README.md  TODO.md  commitlint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json  vite.config.ts
.github/workflows/: ci.yaml  main.yml  publish.yaml  updater.yaml
.husky/_/: .gitignore  commit-msg  pre-commit
scripts/: publish.mjs  updatelog.mjs  updater.mjs
src/: App.vue  main.ts  styles.css  vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/apis/: baidu.ts  gemini.ts  http.ts  model.ts  openai.ts
src/components/: CustomDialog.vue  Setting.vue  Spinner.vue
src/constants/: index.ts
src/stores/: app.ts
src/utils/: index.ts  md5.ts
